syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteDiskRequest {
    reserved 2;

    types.Disk Disk = 1;
}

message DeleteDiskTaskState {
    DeleteDiskRequest Request = 1;
}

