syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message ReleaseBaseDiskRequest {
    types.Disk OverlayDisk = 1;
}

message ReleaseBaseDiskTaskState {
    ReleaseBaseDiskRequest Request = 1;
}
